[package]
name = "tastytrade-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
derive_builder = "0.12.0"
once_cell = "1.17.1"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest_inspect_json = "0.1.0"
rust_decimal = { version = "1.29.1", features = ["serde-with-arbitrary-precision", "serde-with-float"] }
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
flume = "0.10.14"
widestring = "1.0.2"
url = "2.3.1"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio = { version = "1.28.1", features = ["io-util"] }
futures-util = "0.3.28"
erased-serde = "0.3.25"
dxfeed = "0.2.1"
